# hl_homework_queue

./: CMakeLists.txt  README.md  kafka_service.cpp  techstack.md  techstack.yml
content/: main.html  wall.html
database/: chat.h  database_mysql.cpp  database_mysql.h  friends.h  person.h  wall.h  wall_view.h
docker/: docker-compose.yml
web_server/: httprequestfactory.h  httpwebserver.h
web_server/handlers/: WallHandler.h
web_server/kafka/: kafka_consumer.cpp  kafka_consumer.h  kafka_producer.cpp  kafka_producer.h
